# kb-core

./: README.md  build.py  pyproject.toml
.github/workflows/: test-and-release.yml
src/kb_core/: __init__.py  config.py  notifier.py  renderer.py  skip_dirs.py  skip_exts.py  target_exts.py  types.py  utils.py
tests/: test_config.py  test_notifier.py  test_renderer.py  test_utils.py
